--- a/Backend/backend/src/main/resources/application.yml
+++ b/Backend/backend/src/main/resources/application.yml
@@ -5,14 +5,14 @@ logging:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
 
-    url: jdbc:mysql://localhost:3306/cstore
+    url: jdbc:postgresql://localhost:5432/cstore
     username: cadmin
     password: cstore_GRP28_CSE21
   jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQLDialect
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: none
     show-sql: true
