--- a/Backend/backend/src/main/resources/application.yml
+++ b/Backend/backend/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     driver-class-name: org.postgresql.Driver
 
     url: jdbc:postgresql://localhost:5432/cstore
-    username: cadmin
-    password: cstore_GRP28_CSE21
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
