Implemented authentication & authorization. Having some issues though.

--- a/Backend/backend/src/main/resources/application.yml
+++ b/Backend/backend/src/main/resources/application.yml
@@ -31,3 +31,8 @@ spring:
         classpath:schema.sql
       data-locations:
         classpath:data.sql
+
+token:
+  expiration-ms: 600000
+  secret:
+    key: ${SECRET_KEY}
